--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Antonio Animation</title>
   </head>
-  <body>My Website
+  <body>
+    My Website
+    <video src="https://www.youtube.com/watch?v=1EUcGBMVRbA">
   </body>
 </html>
