--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     My Website
-    <video src="https://www.youtube.com/watch?v=1EUcGBMVRbA">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
