--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h1>My Website HI BITCH </h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <ul>
-      <l1>home</l1>
-      <l2><a href="bio.html>bio</a></l2>
+      <li>home</li>
+      <li><a href="bio.html>bio</a></li>
     </ul>
   </body>
 </html>
