--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <ul>
       <li>home</li>
-      <li><a href="bio.html>bio</a></li>
+      <li><a href="bio.html">bio</a></li>
     </ul>
   </body>
 </html>
