--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Antonio Animation</title>
   </head>
   <body>
-    <h1>My Website HI BITCH </h1>
+    <h1>Soranin</h1>
     <ul>
       <li>home</li>
       <li><a href="bio.html">bio</a></li>
