--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <li>home</li>
       <li><a href="bio.html">bio</a></li>
     </ul>
+    <p>Currrent Demo Reel</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
   <footer>
