--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <img src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
-    <h1>Soranin</h1>
-    <ul>
-      <li>home</li>
-      <li><a href="bio.html">bio</a></li>
-    </ul>
+    <h1 class="Username">Soranin</h1>
+    <nav>
+      <ul>
+        <li>home</li>
+        <li><a href="bio.html">bio</a></li>
+      </ul>
+    </nav>
     <p>Currrent Demo Reel</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
