--- a/index.html
+++ b/index.html
@@ -5,24 +5,37 @@
     <link rel="icon" href="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg"/>
     <link href="main.css" rel="stylesheet" type="text/css"/>
   </head>
+
+
   <body>
-    <img src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
-    <h1 class="Username">Soranin</h1>
-    <nav>
-      <ul>
-        <li>home</li>
-        <li><a href="bio.html">bio</a></li>
-      </ul>
-    </nav>
-    <p>Currrent Demo Reel</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <header>
+      <nav>
+        <h1><img class="logo" src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg"/>Soranin</h1>
+        <ul>
+          <li><a href="bio.html">Bio</a></li>
+          <li class="current">Home</li>
+        </ul>
+      </nav>
+    </header>
+
+    <div>
+      <p class="reel">Currrent Demo Reel</p>
+      <iframe width="1024" height="576" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
   </body>
+
+
   <footer>
     <h1>Socials</h1>
     <ul>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Soranin422"><img src="https://i.ya-webdesign.com/images/black-twitter-logo-png-4.png"></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw"><img src="https://cdn.clipart.email/e6eed6ce6c8196b321c4b27e36d9fc82_youtube-logo-computer-icons-youtube-png-download-512512-_512-512.png"></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/soranin422/"><img src="https://i.ya-webdesign.com/images/instagram-logo-black-and-white-png.png"></a></li>
+      <li class="twitter"><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Soranin422">twitter</a></li>
+      <li class="youtube"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw">youtube</a></li>
+      <li class="instagram"><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/soranin422/">instagram</a></li>
     <ul>
   <footer>
+
+
 </html>
+
